# ros_ojt

devel/lib/week1/: week1_turtle0812_pub
src/week1/: CMakeLists.txt  package.xml
src/week1/src/: turtle0809_pub.cpp  turtle0812_pub.cpp
week2_catkin_ws/devel/include/astra_camera/: AstraConfig.h  GetCameraParams.h  GetCameraParamsRequest.h  GetCameraParamsResponse.h  GetUVCMirror.h  GetUVCMirrorRequest.h  GetUVCMirrorResponse.h  GetVersionRequest.h  GetVersionResponse.h  SetAeEnableRequest.h  SetAeEnableResponse.h  SetAutoExposureRequest.h  SetAutoExposureResponse.h  SetAutoWhiteBalanceRequest.h  SetAutoWhiteBalanceResponse.h  SetDistortioncalRequest.h  SetDistortioncalResponse.h  SetFanRequest.h  SetFanResponse.h  SetMirrorRequest.h  SetMirrorResponse.h  SetUVCMirror.h  SetUVCMirrorRequest.h  SetUVCMirrorResponse.h  UVCCameraConfig.h
week2_catkin_ws/devel/include/lsm10_v2/: difop.h
week2_catkin_ws/devel/lib/astra_camera/: astra_camera_node  astra_list_devices  astra_test_wrapper  astra_usb_reset
week2_catkin_ws/devel/lib/lsm10_v2/: lsm10_v2
week2_catkin_ws/devel/lib/pkgconfig/: astra_camera.pc  lsm10_v2.pc  week2.pc
week2_catkin_ws/devel/share/astra_camera/cmake/: astra_cameraConfig.cmake
week2_catkin_ws/devel/share/astra_camera/docs/: AstraConfig-usage.dox  AstraConfig.dox  AstraConfig.wikidoc  UVCCameraConfig-usage.dox  UVCCameraConfig.dox  UVCCameraConfig.wikidoc
week2_catkin_ws/src/week2/: CMakeLists.txt
week2_catkin_ws/src/week2/launch/: a.launch  save.rviz
week2_catkin_ws/src/week2/urdf/: 0818.urdf  test.urdf
(+24 files in other folders)
